--- a/admin.kuninganrunners.com/assets/css/style.css
+++ b/admin.kuninganrunners.com/assets/css/style.css
@@ -1291,7 +1291,7 @@ canvas {
   /* Atur atribut lain sesuai kebutuhan */
 }
 body .title_page_app {
-  font-family: 'cc_running_with_scissorsMd', sans-serif !important;
+  font-family: 'Roguelai', sans-serif !important;
   font-size: 14pt;
   color: #f0b906;
 }
