--- a/kuninganrunners.com/assets/css/main.css
+++ b/kuninganrunners.com/assets/css/main.css
@@ -2574,3 +2574,7 @@ section,
   font-family: monospace;
   margin-top: 10px;
 }
+.sitename{
+  font-family: 'Roguelai', sans-serif !important;
+  font-size: 18pt;
+}
