--- a/admin.kuninganrunners.com/assets/fonts/fonts.css
+++ b/admin.kuninganrunners.com/assets/fonts/fonts.css
@@ -1141,3 +1141,9 @@
     font-weight: normal;
     font-style: normal;
 }
+@font-face {
+    font-family: 'Roguelai';
+    src: url('Roguelai.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
