--- a/kuninganrunners.com/assets/css/main.css
+++ b/kuninganrunners.com/assets/css/main.css
@@ -2732,3 +2732,22 @@ body {
   background: #fff;
   color: #57cc99
 }
+
+
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+}
+
+.main {
+  flex: 1; /* Membuat bagian utama mengambil sisa ruang */
+}
+
+.footer {
+  text-align: center;
+  padding: 10px 0;
+  width: 100%;
+}
